src/render/snapshots/webgit__render__commit__tests__commit_html_merge_with_diff.snap
---
source: src/render/commit.rs
expression: "render_to_string(&init_tera(), \"commit.html\", &template).unwrap()"
---
<table class="tag-table">
    <tbody>
        <tr>
            <td class="label">author</td>
            <td>Kunal Mehta &lt;author@example.org&gt; 2026-01-15 12:34:56 +00:00</td>
        </tr>
        <tr>
            <td class="label">committer</td>
            <td>Committer Person &lt;committer@example.org&gt; 2026-01-15 13:00:00 +00:00</td>
        </tr>
        
        <tr>
            <td class="label">parent</td>
            <td class="mono"><a href="#!/commit/1111111111111111111111111111111111111111">11111111</a></td>
        </tr>
        
        <tr>
            <td class="label"></td>
            <td class="mono"><a href="#!/commit/2222222222222222222222222222222222222222">22222222</a></td>
        </tr>
        
        <tr>
            <td class="label">commit</td>
            <td class="mono">0123abcd0123abcd0123abcd0123abcd0123abcd</td>
        </tr>
        <tr>
            <td class="label">tree</td>
            <td class="mono">fedcba98fedcba98fedcba98fedcba98fedcba98</td>
        </tr>
    </tbody>
</table>

<pre class="tag-message">Fix the thing

Longer explanation with &lt;html&gt; &amp; &quot;chars&quot;.</pre>


<div class="diffstat">
    <p class="diffstat-summary">2 files changed, 4 insertions(+), 1 deletion(-)</p>
    <table class="diffstat-table">
        
        <tr>
            <td class="diffstat-name">src/main.rs</td>
            <td class="diffstat-count">4</td>
            <td class="diffstat-bar-cell">
                <span class="diffstat-bar">
                    <span class="bar-add" style="width: 30%"></span><span class="bar-del" style="width: 10%"></span>
                </span>
            </td>
            <td class="diffstat-pm">
                <span class="add-count">+3</span>
                <span class="del-count">-1</span>
            </td>
        </tr>
        
        <tr>
            <td class="diffstat-name">README</td>
            <td class="diffstat-count">1</td>
            <td class="diffstat-bar-cell">
                <span class="diffstat-bar">
                    <span class="bar-add" style="width: 10%"></span><span class="bar-del" style="width: 0%"></span>
                </span>
            </td>
            <td class="diffstat-pm">
                <span class="add-count">+1</span>
                
            </td>
        </tr>
        
    </table>
</div>

<pre class="diff-pre"><span class="diff-hunk">diff --git a/src/main.rs b/src/main.rs
</span><span class="diff-hunk">@@ -1,3 +1,5 @@
</span><span class="diff-ctx"> fn main() {
</span><span class="diff-del">-    println!(&quot;old&quot;);
</span><span class="diff-add">+    println!(&quot;&lt;new&gt; &amp; escaped&quot;);
</span></pre>
